# kamayan

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  versions.json
0.1/: CMakeLists.txt
acreyes-bump-sing/: 404.html  index.html  kamayan_docs.cpp  sitemap.xml
acreyes-ci-improvements/: 404.html  index.html  sitemap.xml
acreyes-ci-recursive-submods/: 404.html  index.html  sitemap.xml
acreyes-ct-mhd/: 404.html  index.html  sitemap.xml
acreyes-doc-cleanup-v2/: 404.html  index.html  sitemap.xml
acreyes-doc-cleanup-v3/: 404.html  index.html  sitemap.xml
acreyes-doc-cleanup-v4/: 404.html  index.html  sitemap.xml
acreyes-doc-cleanup-v5/: 404.html  index.html  sitemap.xml
acreyes-doc-cleanup-v6/: 404.html  index.html  sitemap.xml
acreyes-fix-ci/: 404.html  index.html  sitemap.xml
acreyes-fix-docs-imgs/: index.html
acreyes-geometry/: 404.html  index.html  sitemap.xml
acreyes-gold-tests/: 404.html  index.html  sitemap.xml
acreyes-graph-for-callbacks/: 404.html  index.html  sitemap.xml
acreyes-hllc/: 404.html  index.html  sitemap.xml
acreyes-kkernels/: 404.html  index.html  sitemap.xml
acreyes-material-reorg/: 404.html  index.html  sitemap.xml
acreyes-more-ci-fix/: 404.html  index.html  sitemap.xml
acreyes-nanobind/: 404.html  index.html  sitemap.xml
acreyes-no-gamma/: 404.html  index.html  sitemap.xml
acreyes-parm-params/: 404.html  index.html  sitemap.xml
acreyes-parthenon-develop/: 404.html  CMakeLists.txt  index.html  sitemap.xml
acreyes-patch-1/: 404.html  index.html  sitemap.xml
acreyes-pybind/: 404.html  index.html  sitemap.xml
acreyes-pykamayan-cli/: 404.html  index.html  objects.inv  sitemap.xml
acreyes-really-tthis-time-ci/: 404.html  index.html  sitemap.xml
acreyes-remove-pr-docs/: 404.html  index.html  sitemap.xml
acreyes-rework-params/: 404.html  index.html  kamayan_docs.cpp  sitemap.xml
acreyes-riemann-states/: 404.html  index.html  sitemap.xml
acreyes-scratch-variables/: 404.html  index.html  sitemap.xml
acreyes-sparse/: 404.html  CMakeLists.txt  index.html  sitemap.xml
acreyes-statedescriptor-plus-plus/: 404.html  index.html  sitemap.xml
acreyes-status-checks/: 404.html  index.html  sitemap.xml
acreyes-subpacks/: 404.html  CMakeLists.txt  index.html  sitemap.xml
acreyes-tools/: 404.html  index.html  sitemap.xml
cmake/: CheckMPI4PyCompatibility.cmake  FindUV.cmake  detect_mpi4py_mpi.py
docker/: Dockerfile.ci  Makefile
docs/: CMakeLists.txt  api.md  building.md  dispatcher.md  driver.md  eos.md  grid.md  hydro.md  index.md  kamayan.md  kamayan_docs.cpp  kamayan_docs.in  make_task_list_graphs.cpp  physics.md  simulation_setup.md  type_list.md  utils.md
docs/material/: eos.md  index.md
src/: CMakeLists.txt  main.cpp  types.hpp
src/dispatcher/: dispatcher.hpp  option_types.hpp  options.hpp
src/dispatcher/pybind/: enum_options.hpp
src/dispatcher/tests/: test_dispatcher.cpp  test_options.cpp
src/driver/: kamayan_driver.cpp  kamayan_driver.hpp  kamayan_driver_types.hpp
src/driver/tests/: test_driver.cpp
src/eos/: eos.hpp  eos_singularity.hpp  eos_types.hpp
src/eos/tests/: test_eos.cpp
src/grid/: boundary_conditions.cpp  coordinates.cpp  coordinates.hpp  geometry.hpp  geometry_types.hpp  grid.cpp  grid.hpp  grid_refinement.cpp  grid_refinement.hpp  grid_types.hpp  grid_update.hpp  indexer.hpp  refinement_operations.hpp  scratch_variables.hpp  subpack.hpp
src/grid/pybind/: grid_bindings.cpp  grid_bindings.hpp  grid_py11.cpp  grid_py11.hpp  parthenon_bindings.cpp  parthenon_bindings.hpp
src/grid/tests/: test_coordinates_pack.cpp  test_coordinates_pack.hpp  test_geometry.cpp  test_geometry.hpp  test_grid.cpp  test_grid.hpp  test_scratch.cpp
src/kamayan/: callback_dag.cpp  callback_dag.hpp  callback_registration.hpp  config.cpp  config.hpp  driver.cpp  driver.hpp  fields.hpp  kamayan.cpp  kamayan.hpp  runtime_parameters.cpp  runtime_parameters.hpp  unit.cpp  unit.hpp  unit_data.cpp  unit_data.hpp
src/kamayan/pybind/: kamayan_bindings.cpp  kamayan_bindings.hpp  kamayan_manager_py.cpp  kamayan_nanobind.h  kamayan_py11.cpp  kamayan_py11.hpp
src/kamayan/tests/: test_callback_dag.cpp  test_config.cpp  test_runtime_parameters.cpp  test_unit_collection.cpp  test_unit_data.cpp
src/kamayan_utils/: map_list.hpp  parallel.hpp  robust.hpp  strings.cpp  strings.hpp  type_abstractions.hpp  type_list.hpp  type_list_array.hpp
src/kamayan_utils/tests/: test_strings.cpp  test_type_list.cpp  test_type_list_array.cpp
src/physics/: multi_species.cpp  physics.cpp  physics.hpp  physics_types.hpp
src/physics/eos/: eos.cpp  eos.hpp  eos_singularity.hpp  eos_types.hpp  equation_of_state.hpp
src/physics/eos/tests/: test_eos.cpp
src/physics/hydro/: hydro.cpp  hydro.hpp  hydro_add_flux_tasks.cpp  hydro_tasks.hpp  hydro_time_step.cpp  hydro_types.hpp  primconsflux.cpp  primconsflux.hpp  reconstruction.hpp  riemann_solver.hpp  thinc.hpp
src/physics/hydro/tests/: test_reconstruction.cpp  test_thinc.cpp
src/physics/material_properties/: material.cpp  material.hpp  material_types.hpp  multi_species.cpp  multi_species.hpp  multi_species_types.hpp  species.cpp  species.hpp  species_types.hpp
src/physics/material_properties/eos/: eos.cpp  eos.hpp  eos_singularity.hpp  eos_types.hpp  equation_of_state.cpp  equation_of_state.hpp
src/physics/material_properties/eos/tests/: test_eos.cpp
src/problems/: CMakeLists.txt  advect_disc.py  isentropic_vortex.cpp  isentropic_vortex.hpp  isentropic_vortex.in  mhd_blast.cpp  mhd_blast.in  sedov.cpp  sedov.in  sedov.py  shock_tube.py
src/tests/: gtest_main.cpp
src/unit/: config.hpp  runtime_parameters.cpp  runtime_parameters.hpp
src/unit/tests/: test_config.cpp  test_runtime_parameters.cpp
src/units/: dispatcher.hpp
src/units/tests/: test_dispatcher.cpp
src/utils/: map_list.hpp  parallel.hpp  strings.cpp  strings.hpp  test_strings.cpp  type_abstractions.hpp  type_list.hpp  type_list_array.hpp
src/utils/tests/: test_strings.cpp  test_type_list.cpp  test_type_list_array.cpp
(+433 files in other folders)
