[project]
name="kamayan"
version="0.1.0"
requires-python = ">= 3.10, < 3.14"
dependencies = [
   "typer>=0.12.0",
   "rich>=13.0.0",
   "requests>=2.32.0",
   "matplotlib>=3.10.1",
   "numpy>=2.2.5",
   # build
   "cmake>=4.0.0",
   "compdb>=0.2.0",
   # format & linting
   "clang-format>=20.1.0",
   "cmakelang>=0.6.13",
   "cpplint>=2.0.0",
   "pyright>=1.1.408",
   "ruff>=0.11.7",
    # mkdocs and documentation
    "markdown-include>=0.8.1",
    "markdown-katex>=202406.1035",
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.11",
    "mkdocstrings[python]>=0.24.0",
    "mkdocstrings-python>=1.7.0",
    "pymdown-extensions>=10.14.3",
   "parthenon_tools",
   "wget>=3.2",
   "h5py>=3.14.0",
   "mpi4py>=4.1.0",
   "pytest>=8.4.1",
]

[project.scripts]
baselines = "kamayan.testing.baselines:app"

[tool.uv]
package = true
no-binary-package = ["mpi4py"]  # Force source build for mpi4py

[tool.uv.sources]
parthenon_tools = { path = "external/parthenon/scripts/python/packages/parthenon_tools" , editable=true}

[tool.setuptools]
packages = ["kamayan"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "external",
    "node_modules",
    "site-packages",
    "venv",
]



[tool.pyright]
extraPaths = [
   "kamayan", 
   "external/parthenon/scripts/python/packages/parthenon_tools",
   "external/parthenon/tst/regression" # this is only really because the parthenon test suite is kind wonky
]

include = [
   "kamayan",
   "cmake"
]

exclude = [
   "kamayan/pyKamayan/*"
]



# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.9
target-version = "py39"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["D", "E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/test_suites/**/__init__.py" = ["D104"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.pydocstyle]
convention = "google" # Enforce Google-style docstrings
